feat(sharing): Stock URI from webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TISSINI APP</string>
+    <string name="user_agent_suffix">TISSINIAPP/3.0</string>
 </resources>
